Fix carousel wrapper overflow by removing width from it

--- a/style-sup.css
+++ b/style-sup.css
@@ -190,7 +190,6 @@ a:active {
 /* GALLERY */
 
 .wrapper {
-  width: 100%;
   position: relative;
   overflow: hidden;
 }
